# aplite

./: .gitignore  Cargo.toml  LICENSE  README.md  run.nu  todolist.md
crates/aplite_bitset/: Cargo.toml
crates/aplite_bitset/src/: lib.rs
crates/aplite_future/: Cargo.toml  README.md
crates/aplite_future/src/: block_on.rs  channel.rs  executor.rs  lib.rs  runtime.rs  sleep.rs  stream.rs  task.rs  waker.rs
crates/aplite_layout/: Cargo.toml
crates/aplite_layout/src/: tree.rs
crates/aplite_macro/: Cargo.toml
crates/aplite_macro/src/: lib.rs
crates/aplite_pollster/: Cargo.toml  README.md
crates/aplite_reactive/: Cargo.toml  README.md
crates/aplite_reactive/src/: channel.rs  effect.rs  graph.rs  lib.rs  memo.rs  reactive_traits.rs  read_signal.rs  runtime.rs  rw_signal.rs  scope.rs  signal.rs  signal_read.rs  signal_write.rs  source.rs  stored_value.rs  subscriber.rs  traits.rs  write_signal.rs
crates/aplite_renderer/: Cargo.toml  README.md
crates/aplite_renderer/src/: atlas.rs  buffer.rs  element.rs  gfx.rs  glyph.rs  gpu.rs  lib.rs  mesh.rs  renderer.rs  screen.rs  shader.rs  storage.rs  texture.rs  util.rs
crates/aplite_renderer/src/texture/: atlas.rs  image_data.rs  texture_data.rs
crates/aplite_stats/: Cargo.toml
crates/aplite_stats/src/: lib.rs
crates/aplite_storage/: Cargo.toml  README.md
crates/aplite_storage/src/: arena.rs  atlas_allocator.rs  buffer.rs  data_store.rs  derived.rs  entity.rs  entity_manager.rs  hash.rs  index_map.rs  iterator.rs  lib.rs  manager.rs  slot.rs  storage.rs  tree.rs  type_erased_array.rs  vecmap.rs
crates/aplite_storage/src/arena/: item.rs  mod.rs  non_static_arena.rs  ptr.rs  static_arena.rs  typed.rs  untyped.rs
crates/aplite_storage/src/data/: archetype.rs  array.rs  bitset.rs  component.rs  component_storage.rs  dense_column.rs  dense_row.rs  mod.rs  query.rs  sparse_index.rs  table.rs
crates/aplite_storage/src/indexmap/: index_map.rs  mod.rs  slot.rs
crates/aplite_storage/src/map/: dense_map.rs  dense_slotmap.rs  hash.rs  id.rs  index_map.rs  mod.rs  slot.rs  slot_map.rs  sparse_set.rs
crates/aplite_storage/src/sparse_set/: indices.rs  mod.rs  type_erased.rs  typed.rs  untyped.rs
crates/aplite_storage/src/tree/: mod.rs  node.rs  sparse_tree.rs  tree.rs
crates/aplite_types/: Cargo.toml
crates/aplite_types/src/: color.rs  corner_radius.rs  fraction.rs  length.rs  lib.rs  matrix.rs  point.rs  rect.rs  size.rs  traits.rs  unit.rs  vector.rs
crates/aplite_types/src/paint/: color.rs  image_data.rs  mod.rs
crates/aplite_types/src/shapes/: circle.rs  mod.rs  rect.rs  rounded_rect.rs
examples/: demo.rs  drag_child.rs  simple.rs
math/src/: lib.rs  matrix.rs  size.rs  vector2.rs  vector3.rs
pollster/: Cargo.toml
pollster/src/: lib.rs
shared/: Cargo.toml
shared/src/: color.rs  fraction.rs  lib.rs  matrix.rs  size.rs  vector.rs
slotmap/: Cargo.toml
slotmap/src/: lib.rs
src/: app.rs  buffer.rs  callback.rs  color.rs  context.rs  cursor.rs  element.rs  error.rs  gpu.rs  image_data.rs  layout.rs  lib.rs  main.rs  pipeline.rs  properties.rs  reactive.rs  renderer.rs  shader.rs  shapes.rs  signal.rs  state.rs  storage.rs  style.rs  texture.rs  tree.rs  types.rs  view.rs  widget.rs  widget_state.rs  widget_tree.rs
src/context/: callback.rs  cursor.rs  data.rs  layout.rs  properties.rs  tree.rs  widget_state.rs
src/reactive/: arc_signal.rs  rw_signal.rs  signal.rs  signal_read.rs  signal_write.rs  traits.rs
src/renderer/: buffer.rs  element.rs  gfx.rs  gpu.rs  mesh.rs  pipeline.rs  render_util.rs  screen.rs  shader.rs  texture.rs  util.rs
src/view/: button.rs  hstack.rs  image.rs  stack.rs  vstack.rs
src/widget/: button.rs  either.rs  image.rs  iterables.rs  stack.rs  text.rs  view_fn.rs
util/: Cargo.toml
util/src/: fraction.rs  lib.rs  matrix.rs  size.rs  vector2.rs  vector3.rs  vector4.rs
vertex_renderer/: Cargo.toml
