[package]
name = "aplite"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
edition = "2024"
authors = ["Qoid Naufal"]
license = "MIT"
repository = "https://github.com/qoidnaufal/aplite"

[workspace]
members = [
  "crates/aplite_types",
  "crates/aplite_future",
  "crates/aplite_renderer",
  "crates/aplite_stats",
  "crates/aplite_reactive",
  "crates/aplite_storage",
]

[dependencies]
winit.workspace = true
wgpu.workspace = true
aplite_types.workspace = true
aplite_stats = { path = "crates/aplite_stats", default-features = false, optional = true }
aplite_reactive = { path = "crates/aplite_reactive" }
aplite_renderer = { path = "crates/aplite_renderer" }
aplite_storage = { path = "crates/aplite_storage" }
aplite_future = { path = "crates/aplite_future" }

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["rayon", "jpeg", "png"]
optional = true

[workspace.dependencies]
aplite_types = { path = "crates/aplite_types" }
wgpu = "26.0.1"
winit = "0.30.11"

[features]
default = ["image"]
image = ["dep:image"]
cursor_stats = []
debug_tree = []
render_stats = ["dep:aplite_stats"]
