[package]
name = "aplite"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
edition = "2024"
authors = ["Qoid Naufal"]
license = "MIT"
repository = "https://github.com/qoidnaufal/aplite"

[workspace]
members = [
  "crates/aplite_types",
  "crates/aplite_future",
  "crates/aplite_renderer",
  "crates/aplite_stats",
  "crates/aplite_reactive",
  "crates/aplite_storage",
  "crates/aplite_layout",
]

[dependencies]
winit.workspace = true
wgpu.workspace = true
aplite_types.workspace = true
aplite_storage.workspace = true
aplite_stats = { path = "crates/aplite_stats", default-features = false, optional = true }
aplite_reactive = { path = "crates/aplite_reactive" }
aplite_renderer = { path = "crates/aplite_renderer" }
aplite_future = { path = "crates/aplite_future" }
aplite_layout = { path = "crates/aplite_layout" }

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["rayon", "jpeg", "png"]
optional = true

[workspace.dependencies]
aplite_storage = { path = "crates/aplite_storage" }
aplite_types = { path = "crates/aplite_types" }
wgpu = "27.0.1"
winit = "0.30.12"

[features]
default = ["image"]
image = ["dep:image"]
cursor_stats = []
debug_tree = []
render_stats = ["dep:aplite_stats"]

[profile.release]
opt-level = 3
lto = true
