[package]
name = "aplite_renderer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aplite_types.workspace = true
aplite_future = { path = "../aplite_future" }
winit.workspace = true
wgpu.workspace = true

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["rayon", "jpeg", "png"]
optional = true

[features]
image = ["dep:image"]
