[package]
name = "aplite_renderer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aplite_types.workspace = true
aplite_storage.workspace = true
aplite_macro.workspace = true
winit.workspace = true
wgpu.workspace = true
